--- a/index.html
+++ b/index.html
@@ -357,7 +357,50 @@
     </div>
 </section>
 
-<section class="section-pd how-it-work" id="how-it-work">
+<section class="how-it-works">
+            <div class="container">
+                <h2 class="title-main text-center slider-title mb-5">Как это работает</h2>
+            </div>
+        </section>
+
+        <div class="product__sticky">
+            <div class="product__sticky-section-blocks">
+                <div class="product__sticky-section">
+                    <div class="container">
+                        <div class="product__sticky-section-content">
+                            <h3>Что и где?</h3>
+                            <p>В потолок, стену или пол встраиваются капиллярные маты — система из плотно соединенных легких и эластичных полипропиленовых трубок. По трубкам циркулирует дистиллированная вода.</p>
+                        </div>
+                        <div class="product__sticky-section-img">
+                            <img src="img/main/how-it-works/image-1.png"/>
+                        </div>
+                    </div>
+                </div>
+                <div class="product__sticky-section">
+                    <div class="container">
+                        <div class="product__sticky-section-content">
+                            <h3>Виды работы</h3>
+                            <p>Вода соприкасается с воздухом в помещении, нагретым от тепла людей, техники или солнечного света. По трубам она поступает в холодильный блок, отдает поглощенное тепло и возвращается в капиллярные маты уже охлажденной.</p>
+                        </div>
+                        <div class="product__sticky-section-img">
+                            <img src="img/main/how-it-works/image-1.png"/>
+                        </div>
+                    </div>
+                </div>
+                <div class="product__sticky-section">
+                    <div class="container">
+                        <div class="product__sticky-section-content">
+                            <h3>Итог</h3>
+                            <p>Благодаря этой схеме в комнате понижается температура и создается комфортный микроклимат.</p>
+                        </div>
+                        <div class="product__sticky-section-img">
+                            <img src="img/main/how-it-works/image-1.png"/>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- <section class="section-pd how-it-work" id="how-it-work">
     <div class="container col">
         <h2 class="title-main text-center slider-title mb-5">Как это работает</h2>
         <div class="slider-content">
@@ -425,7 +468,7 @@
         </div>
 
     </div>
-</section>
+</section> -->
 
 <section class="section-pd news" id="news">
     <div class="container">
