--- a/borehole.html
+++ b/borehole.html
@@ -346,63 +346,52 @@
 </section>
 
 
-<section class="section-pd how-it-work" id="how-it">
-    <div class="container col">
+<section class="how-it-works">
+    <div class="container">
         <h2 class="title-main text-center slider-title mb-5">Как это работает</h2>
-        <div class="slider-content">
-            <div class="slider-progress slider-progress-1">
-                <div class="slider-progress-text col-md-6">
-                    <p>В потолок, стену или пол встраиваются капиллярные маты — система из плотно соединенных легких и
-                        эластичных полипропиленовых трубок. По трубкам циркулирует дистиллированная вода.</p>
-                    <p>
-                        Вода соприкасается с воздухом в помещении, нагретым от тепла людей, техники или солнечного
-                        света. По трубам она поступает в холодильный блок, отдает поглощенное тепло и возвращается в
-                        капиллярные маты уже охлажденной.
-                    </p>
-                    <p>
-                        Благодаря этой схеме в комнате понижается температура и создается комфортный микроклимат.
-                    </p>
-                </div>
+    </div>
+</section>
 
-                <div class="slider-line">
-                    <button class="slider-num slider-num1">01</button>
+<div class="product__sticky">
+    <div class="product__sticky-section-blocks">
+        <div class="product__sticky-section">
+            <div class="container">
+                <div class="product__sticky-section-content">
+                    <h3>Что и где?</h3>
+                    <p>С помощью геотермальной энергии система обогревает помещения зимой и охлаждает их летом — без использования угля, газа и другого топлива.</p>
+                    <p class="mt-2">Для этого в земле пробуриваются скважины. Количество скважин и глубина бурения зависят от заказа и рассчитываются индивидуально для каждого клиента. В них опускается грунтовый U-образный коллектор, состоящий из двух полиэтиленовых труб: желтая труба собирает тепло, синяя доставляет разогретый теплоноситель в дом.</p>
                 </div>
-                <div class="slider-progress-image slider-image-1">
-                    <img src="./img/main/how-it-works/image-1-1.png" alt="Image background"/>
-                    <img src="./img/main/how-it-works/image-1.png" alt="Image Mats"/>
-                </div>
-            </div>
-            <div class="slider-progress slider-progress-2">
-                <div class="slider-progress-text">
-                    <p>В потолок, стену или пол встраиваются капиллярные маты — система из плотно соединенных легких и
-                        эластичных полипропиленовых трубок. По трубкам циркулирует дистиллированная вода.</p>
-                </div>
-
-                <div class="slider-line">
-                    <button class="slider-num slider-num2">02</button>
-                </div>
-                <div class="slider-progress-image slider-image-1">
-                    <img src="./img/main/how-it-works/image-1-1.png" alt="Image background"/>
-                    <img src="./img/main/how-it-works/image-1.png" alt="Image Mats"/>
-                </div>
-            </div>
-            <div class="slider-progress slider-progress-3">
-                <div class="slider-progress-text">
-                    <p>В потолок, стену или пол встраиваются капиллярные маты — система из плотно соединенных легких и
-                        эластичных полипропиленовых трубок. По трубкам циркулирует дистиллированная вода.</p>
-                </div>
-                <div class="slider-line">
-                    <button class="slider-num slider-num3">03</button>
-                </div>
-                <div class="slider-progress-image slider-image-1">
-                    <img src="./img/main/how-it-works/image-1-1.png" alt="Image background"/>
-                    <img src="./img/main/how-it-works/image-1.png" alt="Image Mats"/>
+                <div class="product__sticky-section-img">
+                    <img src="img/borehole/borehole-what.png"/>
                 </div>
             </div>
         </div>
-
+        <div class="product__sticky-section">
+            <div class="container">
+                <div class="product__sticky-section-content">
+                    <h3>Виды работы</h3>
+                    <p>Затем в скважину под высоким давлением заливается цементный раствор с дополнительными компонентами — это называется тампонаж, он нужен для герметичности и улучшения теплообмена. </p>
+                    <p class="mt-2">После этого все коллекторы собираются в гео-контуры, состоящие из обвязанных между собой скважин, с дополнительной трубой, Петлёй Тихельмана, для балансировки давления на каждом контуре, пролегающая трасса будет опущена на 2,5 метра в грунт ниже уровня промерзания и подведена в тепловой пункт к тепловым насосам.</p>
+                </div>
+                <div class="product__sticky-section-img">
+                    <img src="img/catalog/geothermal.png"/>
+                </div>
+            </div>
+        </div>
+        <div class="product__sticky-section">
+            <div class="container">
+                <div class="product__sticky-section-content">
+                    <h3>Итог</h3>
+                    <p>В коллекторы под давлением закачивается теплоноситель. Это раствор на основе 1,2 пропиленгликоля — многоатомного спирта, в состав которого входят ингибиторы, замедляющие износ системы.</p>
+                    <p class="mt-2">Теплоноситель нагревается от тепла земной коры и поднимается вверх, собрав низкопотенциальную энергию с температурой +8 С +10 С. Тепловые насосы преобразуют эту энергию в высокопотенциальную — +35 +40 С, которая и отправляется в систему отопления.</p>
+                </div>
+                <div class="product__sticky-section-img">
+                    <img src="img/borehole/borehole-what-2.png"/>
+                </div>
+            </div>
+        </div>
     </div>
-</section>
+</div>
 
 <section class="section-pd faq" id="faq">
     <div class="container">
