--- a/catalog.html
+++ b/catalog.html
@@ -193,7 +193,7 @@
                             </span>
                         </div>
                     </a>
-                    <a href="#" class="catalog-card">
+                    <a href="borehole.html" class="catalog-card">
                         <div class="top">
                             <h2>Геотермальная скважина</h2>
                             <img src="img/catalog/geothermal.png" />
