--- a/calculate.html
+++ b/calculate.html
@@ -25,6 +25,8 @@
     <script src="./libs/pdfmake/pdfmake.js" defer></script>
     <script src="./libs/pdfmake/vfs_fonts.js" defer></script>
     <script src="js/app.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" defer></script>
+
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -145,7 +147,7 @@
                 </a>
             </div>
 
-            <div class="col-md-8">
+            <div class="col-md-8" id="forPDF">
                 <h1 class="title-hero mb-3 mt-5" id="calculatorWrapper">Рассчитайте Ваш&nbsp;дом</h1>
                 <div class="calculate-card">
                     <div class="card-inner">
@@ -164,7 +166,7 @@
                             <button class="btn-details" style="display: none">Раскрыть детали</button>
                         </div>
                     </div>
-                    <div class="more-details">
+                    <div class="more-details" id="fabrics">
                         <h3>Из чего складывается сумма</h3>
                         <div class="details-container">
                             <ul class="details-list">
@@ -197,7 +199,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <button class="btn-icon btn btn-sndry mt-3" onclick="generatePDF()">
+                        <button class="btn-icon btn btn-sndry mt-3" onclick="generatePDF()" id="download-btn">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                  xmlns="http://www.w3.org/2000/svg">
                                 <path d="M11 13.5858V2C11 1.44771 11.4477 1 12 1C12.5523 1 13 1.44771 13 2V13.5858L16.2929 10.2929C16.6834 9.90237 17.3166 9.90237 17.7071 10.2929C18.0976 10.6834 18.0976 11.3166 17.7071 11.7071L12.7071 16.7071C12.3166 17.0976 11.6834 17.0976 11.2929 16.7071L6.29289 11.7071C5.90237 11.3166 5.90237 10.6834 6.29289 10.2929C6.68342 9.90237 7.31658 9.90237 7.70711 10.2929L11 13.5858Z"
