--- a/calculate.html
+++ b/calculate.html
@@ -187,7 +187,7 @@
                                     <span class="title">Расходники</span>
                                     <span class="price" id="consumables-price">2 104 542 ₸</span>
                                 </li>
-                                <li>
+                                <li id="ice-machine-li">
                                     <span class="title" id="ice-machine-title">Тепловой насос</span>
                                     <span class="price" id="ice-machine-price">3 341 250 ₸</span>
 
